--- a/src/app/app.csproj
+++ b/src/app/app.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.0.5"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
+    <PackageReference Include="System.CodeDom" Version="4.5.0"/>
   </ItemGroup>
 </Project>
