--- a/src/PowerAppsWebApiUtils.Tests/PowerAppsWebApiUtilsTests.csproj
+++ b/src/PowerAppsWebApiUtils.Tests/PowerAppsWebApiUtilsTests.csproj
@@ -4,6 +4,11 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>  
+   </ItemGroup>  
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2"/>
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2"/>
