--- a/src/PowerAppsWebApiUtils.Console/PowerAppsWebApiUtils.Console.csproj
+++ b/src/PowerAppsWebApiUtils.Console/PowerAppsWebApiUtils.Console.csproj
@@ -1,23 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <IsPackable>false</IsPackable>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>  
-   </ItemGroup>  
+   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
-    <PackageReference Include="MSTest.TestAdapter" Version="1.3.2"/>
-    <PackageReference Include="MSTest.TestFramework" Version="1.3.2"/>
-    <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0"/>
+    <ProjectReference Include="..\PowerAppsWebApiUtils\PowerAppsWebApiUtils.csproj"/>
+  </ItemGroup>   
+  <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.0.5"/>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
+    <PackageReference Include="System.CodeDom" Version="4.5.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0"/>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PowerAppsWebApiUtils\PowerAppsWebApiUtils.csproj"/>
   </ItemGroup>
 </Project>
