--- a/src/PowerAppsWebApiUtils.Console/PowerAppsWebApiUtils.Console.csproj
+++ b/src/PowerAppsWebApiUtils.Console/PowerAppsWebApiUtils.Console.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="appsettings.json">
@@ -18,5 +18,6 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0"/>
   </ItemGroup>
 </Project>
