--- a/src/PowerAppsWebApiUtils.Tests/PowerAppsWebApiUtilsTests.csproj
+++ b/src/PowerAppsWebApiUtils.Tests/PowerAppsWebApiUtilsTests.csproj
@@ -6,8 +6,8 @@
   <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>  
-   </ItemGroup>  
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2"/>
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0"/>
+    <PackageReference Include="NSubstitute" Version="4.2.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PowerAppsWebApiUtils\PowerAppsWebApiUtils.csproj"/>
