--- a/src/PowerAppsWebApiUtils/PowerAppsWebApiUtils.csproj
+++ b/src/PowerAppsWebApiUtils/PowerAppsWebApiUtils.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.0.5"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0"/>
   </ItemGroup>
 </Project>
