split tests between unit tests vs integrated tests migrate to xunit

--- a/src/PowerAppsWebApiUtils.Console/appsettings.json
+++ b/src/PowerAppsWebApiUtils.Console/appsettings.json
@@ -6,5 +6,5 @@
   "powerappsApiUrl" : "https://pawaubeta01.crm3.dynamics.com/api/data/v9.0/",
   "entities" : "account,contact,customeraddress",
   "namespace" : "PawauBeta01.Data",
-  "filePath" : "C:\\Users\\Philippe\\Documents\\Projects\\Ts\\DynCEWebApiEarlyBound\\src\\PowerAppsWebApiUtils.Tests\\WebApiContext.cs"
+  "filePath" : "C:\\Users\\Philippe\\Documents\\Projects\\Ts\\DynCEWebApiEarlyBound\\src\\PowerAppsWebApiUtils.Generated\\WebApiContext.cs"
 }
