--- a/src/PowerAppsWebApiUtils.Integrated.Tests/PowerAppsWebApiUtils.Integrated.Tests.csproj
+++ b/src/PowerAppsWebApiUtils.Integrated.Tests/PowerAppsWebApiUtils.Integrated.Tests.csproj
@@ -9,17 +9,17 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
-    <PackageReference Include="MSTest.TestAdapter" Version="1.3.2"/>
-    <PackageReference Include="MSTest.TestFramework" Version="1.3.2"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0"/>
-    <PackageReference Include="NSubstitute" Version="4.2.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PowerAppsWebApiUtils\PowerAppsWebApiUtils.csproj"/>
+    <ProjectReference Include="..\PowerAppsWebApiUtils.Generated\PowerAppsWebApiUtils.Generated.csproj"/>
   </ItemGroup>
 </Project>
