--- a/src/PowerAppsWebApiUtils.Unit.Tests/PowerAppsWebApiUtils.Unit.Tests.csproj
+++ b/src/PowerAppsWebApiUtils.Unit.Tests/PowerAppsWebApiUtils.Unit.Tests.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="NSubstitute" Version="4.2.0"/>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PowerAppsWebApiUtils\PowerAppsWebApiUtils.csproj"/>
+    <ProjectReference Include="..\PowerAppsWebApiUtils.Generated\PowerAppsWebApiUtils.Generated.csproj"/>
+  </ItemGroup>  
 
 </Project>
