--- a/src/Console/PowerAppsWebApiUtils.CodeGen/PowerAppsWebApiUtils.CodeGen.csproj
+++ b/src/Console/PowerAppsWebApiUtils.CodeGen/PowerAppsWebApiUtils.CodeGen.csproj
@@ -1,16 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <ItemGroup>
-    <Content Include="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>  
-   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PowerAppsWebApiUtils\PowerAppsWebApiUtils.csproj"/>
-  </ItemGroup>   
   <ItemGroup>
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.0.5"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
@@ -19,5 +10,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\PowerAppsWebApiUtils\PowerAppsWebApiUtils.csproj"/>
   </ItemGroup>
 </Project>
