--- a/src/Console/PowerAppsWebApiUtils.CodeGen/PowerAppsWebApiUtils.CodeGen.csproj
+++ b/src/Console/PowerAppsWebApiUtils.CodeGen/PowerAppsWebApiUtils.CodeGen.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netcoreapp2.0</TargetFrameworks>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>pdm.pawau.snk</AssemblyOriginatorKeyFile>   
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.0.5"/>
