--- a/src/PowerAppsWebApiUtils/PowerAppsWebApiUtils.csproj
+++ b/src/PowerAppsWebApiUtils/PowerAppsWebApiUtils.csproj
@@ -2,7 +2,9 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netcoreapp2.0</TargetFrameworks>
     <IsPackable>true</IsPackable>
-  </PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>pdm.pawau.snk</AssemblyOriginatorKeyFile>    
+</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.0.5"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
