--- a/src/Console/Core/PowerAppsWebApiUtils.Console/appsettings.json
+++ b/src/Console/Core/PowerAppsWebApiUtils.Console/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "clientId": "17bf34b1-6a11-435a-a45b-1596cc50802b",
-  "secret": "z.7z/TtYmyU-W0iRAm6J?2pHU=@/A[d*",
-  "directory": "812056e4-d54e-4a95-8232-443c7c17027c",
-  "powerappsUrl" : "https://pawaubeta01.crm3.dynamics.com",
-  "powerappsApiUrl" : "https://pawaubeta01.crm3.dynamics.com/api/data/v9.0/",
+  "clientId": "f6c8a74b-b39c-4eb0-899e-a34a6689e2d5",
+  "secret": "Zi5_ksI_?-7b23ErIInR/FK*q7DqauU1",
+  "directory": "57d9b6a3-cca5-49f0-895c-b82c324a1376",
+  "powerappsUrl" : "https://pawau.crm3.dynamics.com",
+  "powerappsApiUrl" : "https://pawau.crm3.dynamics.com/api/data/v9.0/",
   "entities" : "account,contact,customeraddress",
   "namespace" : "PawauBeta01.Data",
   "filePath" : "C:\\Users\\Philippe\\Documents\\Projects\\Ts\\DynCEWebApiEarlyBound\\src\\PowerAppsWebApiUtils.Generated\\WebApiContext.cs"
