--- a/Package.nuspec
+++ b/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
   
     <id>PowerAppsWebApiUtils</id>
-    <version>0.0.0.4</version>
+    <version>0.0.0.5</version>
     <description>
       This is an API to work with PowerApps and Dynamics 365 Web API
     </description>    
@@ -15,6 +15,10 @@
     <iconUrl>https://nuget.org/Content/Images/packageDefaultIcon-50x50.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <releaseNotes>
+    0.0.0.5 Add missing nuget assemblies in "earlybound" folder.
+            Change PowerAppsWebApiUtils.Console to tools folder. 
+            From docs.microsoft.com, "The tools folder is added to the PATH environment variable for the Package Manager Console only"
+
     0.0.0.4 Standard OData string query functions support (BeginsWith, EndsWith, Contains)
             Azure Functions have changed their dependency on Newtonsoft [Newtonsoft.Json (>= 11.0.2)], so integration with Azure Functions will be simplier now  https://www.nuget.org/packages/Microsoft.NET.Sdk.Functions/1.0.30-beta1 
     0.0.0.3 OrderBy / OrderByDescending support - Readme.md having few examples
@@ -31,8 +35,8 @@
   </metadata>
   <files>
     <file src="src\PowerAppsWebApiUtils\bin\publish\netstandard2.0\PowerAppsWebApiUtils.dll" target="lib\netstandard2.0" />
-    <file src="src\Console\Core\PowerAppsWebApiUtils.Console\bin\publish\netcoreapp2.2\*.dll" target="lib\earlybound\netcoreapp2.0" />
-    <file src="src\Console\Core\PowerAppsWebApiUtils.Console\bin\publish\netcoreapp2.2\*.runtimeconfig.json" target="lib\earlybound\netcoreapp2.0" />
-    <file src="src\Console\Core\Content\appsettings.json" target="lib\earlybound\netcoreapp2.0" />
+    <file src="src\Console\Core\PowerAppsWebApiUtils.Console\bin\publish\netcoreapp2.2\*.dll" target="tools\earlybound\netcoreapp2.0" />
+    <file src="src\Console\Core\PowerAppsWebApiUtils.Console\bin\publish\netcoreapp2.2\*.runtimeconfig.json" target="tools\earlybound\netcoreapp2.0" />
+    <file src="src\Console\Core\Content\appsettings.json" target="tools\earlybound\netcoreapp2.0" />
   </files>
 </package>
