fix multiple issues

--- a/src/Console/Core/PowerAppsWebApiUtils.Console/appsettings.json
+++ b/src/Console/Core/PowerAppsWebApiUtils.Console/appsettings.json
@@ -1,10 +1,10 @@
 {
-  "clientId": "f6c8a74b-b39c-4eb0-899e-a34a6689e2d5",
-  "secret": "Zi5_ksI_?-7b23ErIInR/FK*q7DqauU1",
-  "directory": "57d9b6a3-cca5-49f0-895c-b82c324a1376",
-  "powerappsUrl" : "https://pawau.crm3.dynamics.com",
-  "powerappsApiUrl" : "https://pawau.crm3.dynamics.com/api/data/v9.0/",
-  "entities" : "account,contact,customeraddress",
+  "clientId": "fbc634ed-d6c1-4025-854a-57a53acc3310",
+  "secret": "Ywh-=o:bs@47HZdC661_W.2zdfLn9F79",
+  "directory": "47ef61d3-32df-479c-8783-b5283f4c773d",
+  "powerappsUrl" : "https://pawau1.crm3.dynamics.com",
+  "powerappsApiUrl" : "https://pawau1.crm3.dynamics.com/api/data/v9.0/" ,
+  "entities" : "account,contact,customeraddress,new_parent,new_child",
   "namespace" : "PawauBeta01.Data",
   "filePath" : "C:\\Users\\Philippe\\Documents\\Projects\\Ts\\DynCEWebApiEarlyBound\\src\\PowerAppsWebApiUtils.Generated\\WebApiContext.cs"
 }
