--- a/Package.nuspec
+++ b/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
   
     <id>PowerAppsWebApiUtils</id>
-    <version>0.0.0.7</version>
+    <version>0.0.0.8</version>
     <description>
       This is an API to work with PowerApps and Dynamics 365 Web API
     </description>    
@@ -15,6 +15,9 @@
     <iconUrl>https://nuget.org/Content/Images/packageDefaultIcon-50x50.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <releaseNotes>
+    0.0.0.8 Fix issue with CallerObjectId.
+            Fix issue in codegen with picklist. EntityMetadata DefaultFormValue is optional.
+            Fix issue with lookup. Lookup are now using schemaType for 'Create' and 'Update' operations and LogicalName for 'Read' operation
     0.0.0.7 Impersonation (new properties CallerObjectId and MSCRMCallerID on WebApiContext and GenericRepository. see Microsoft docs https://docs.microsoft.com/en-us/powerapps/developer/common-data-service/webapi/impersonate-another-user-web-api).
     0.0.0.6 Modification to service registration (Scoped -> Transient) to ease integration with Azure Functions.
     0.0.0.5 Add missing nuget assemblies in "earlybound" folder.
