--- a/src/Console/Core/PowerAppsWebApiUtils.Console/appsettings.json
+++ b/src/Console/Core/PowerAppsWebApiUtils.Console/appsettings.json
@@ -4,7 +4,7 @@
   "directory": "47ef61d3-32df-479c-8783-b5283f4c773d",
   "powerappsUrl" : "https://pawau1.crm3.dynamics.com",
   "powerappsApiUrl" : "https://pawau1.crm3.dynamics.com/api/data/v9.0/" ,
-  "entities" : "account,contact,customeraddress,new_parent,new_child",
+  "entities" : "account,contact,customeraddress,new_parent,new_child,email",
   "namespace" : "PawauBeta01.Data",
   "filePath" : "C:\\Users\\Philippe\\Documents\\Projects\\Ts\\DynCEWebApiEarlyBound\\src\\PowerAppsWebApiUtils.Generated\\WebApiContext.cs"
 }
